@@ -1,3 +1,11 @@
+2015-12-04  Natalia Portillo  <claunia@claunia.com>
+
+	* CD/FullTOC.cs:
+	  Enhanced prettify to be more verbose.
+
+	* CD/TOC.cs:
+	  Corrected typo.
+
 2015-12-03  Natalia Portillo  <claunia@claunia.com>
 
 	* CD/TOC.cs:
